# automx2

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG  CONFIGURATION.asciidoc  CONTRIBUTING.adoc  CONTRIBUTING.md  INSTALLATION.asciidoc  MAILBOXCONFIGURATION.asciidoc  MANIFEST.in  Makefile  README.adoc  README.asciidoc  README.md  STYLEGUIDE.md  alembic.ini  pyproject.toml  requirements-ci.txt  requirements-db.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: qa-checks.yml  unittest.yml
alembic/: Makefile  alembic.ini  env.py  script.py.mako
alembic/versions/: 43ebb40d0578_dav_server_support.py  5334f8a8282c_add_prio_column.py  f62e64b43d2f_2020_0.py
automx2/: __init__.py  config.py  database.py  ldap.py  model.py  server.py  util.py
automx2/generators/: __init__.py  apple.py  mozilla.py  msoft.py  outlook.py
automx2/views/: __init__.py  autoconfig.py  autodiscover.py  database.py  initdb.py  mobileconfig.py  site.py
contrib/: apache-sample.conf  automx2-sample.conf  automx2.service  flask.sh  install.sh  mysql-schema.sql  nginx-sample.conf  package.sh  postgres-schema.sql  seed-example.json  seed-sample-old.json  seed-sample.json  setupvenv.sh  sqlite-generate.sh  sqlite-sample.sql  sqlite-schema.sql  unittest.sh
contrib/OpenRC/: conf_d  init_d
doc/: automx2.adoc  automx2.html  configuration.adoc  howitworks.adoc  index.html  installation.adoc  mailaccountconfig.adoc  sponsorship.adoc  webserver.adoc
docker/: Dockerfile  README.md  automx2.conf
docs/: automx2.adoc  config.adoc  configuration.adoc  dbconfig.adoc  dbupgrade.adoc  howitworks.adoc  index.html  installation.adoc  ldap.adoc  mailaccountconfig.adoc  muaconfig.adoc  operation.adoc  running.adoc  sponsorship.adoc  webserver.adoc
ldap/: .gitignore  Makefile
migrations/: alembic.ini  script.py.mako
migrations/versions/: 13f41ca95089_first.py  a71719365ffe_2020_0.py  f62e64b43d2f_2020_0.py
src/alembic/: alembic.ini
src/alembic/versions/: 43ebb40d0578_dav_server_support.py  5334f8a8282c_add_prio_column.py
src/automx2/: __init__.py  config.py  database.py  ldap.py  model.py  server.py  util.py
src/automx2/generators/: __init__.py  apple.py  mozilla.py  outlook.py
src/automx2/views/: __init__.py  autoconfig.py  autodiscover.py  initdb.py  mobileconfig.py  site.py
tests/: __init__.py  base.py  coverage.rc  test_apple.py  test_basics.py  test_database.py  test_ldap.py  test_mozilla.py  test_msoft.py  test_outlook.py  test_server.py  test_site.py  test_util.py  unittest.conf
