# vim: ts=4 sw=4 noet
#
# Copyright © 2020-2024 Ralph Seichter
#
# This file is part of "automx2".
#
# automx2 is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# automx2 is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with automx2. If not, see <https://www.gnu.org/licenses/>.

[metadata]
author = Ralph Seichter
author_email = automx2@seichter.de
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: System :: Systems Administration
    Topic :: Utilities
description = Mail User Agent auto-configuration service
keywords =
    autoconfig
    mobileconfig
    mua
long_description = file: README.md
long_description_content_type = text/markdown
name = automx2
project_urls =
    Documentation = https://rseichter.github.io/automx2/
    Source = https://github.com/rseichter/automx2
    Tracker = https://github.com/rseichter/automx2/issues
url = https://github.com/rseichter/automx2
version = 2024.1

[options]
install_requires =
    Flask>=1.1.1
    Flask-Migrate>=2.5.2
    Flask-SQLAlchemy>=2.4.1
    ldap3>=2.6
packages = find:
python_requires = >=3.7

[options.package_data]
* =
    contrib/flask.sh
    contrib/setupvenv.sh
    *.conf